<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/ic_menu_beacon"
            android:checked="true"
            android:title="@string/navigation_title_all" />
        <item
            android:id="@+id/nav_nearby"
            android:icon="@drawable/ic_menu_nearby"
            android:title="@string/navigation_title_nearby" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_locate"
            android:title="@string/navigation_title_search" />
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/ic_menu_fav"
            android:title="@string/navigation_title_fav" />
    </group>

    <item android:title="@string/navigation_title_service">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/navigation_title_logout" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/navigation_title_about" />
        </menu>
    </item>

</menu>
