<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="be.thomasmore.brrr.AboutActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/about_logo_size"
        android:layout_height="@dimen/about_logo_size"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/about_logo_margin"
        android:src="@drawable/icon2"/>


    <TextView
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorSecondaryText"
        android:text="@string/about_slogan"
        android:textSize="@dimen/about_context"
        android:layout_marginTop="@dimen/about_slogan_margin"
        android:layout_below="@id/logo" />


    <TextView
        android:id="@+id/developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/slogan"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorSecondaryText"
        android:text="@string/about_developer"
        android:layout_marginTop="@dimen/about_developer_margin"
        android:textSize="@dimen/about_context"/>


    <TextView
        android:id="@+id/developer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/developer"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorSecondaryText"
        android:text="@string/about_developer1"
        android:textSize="@dimen/about_context"/>

    <TextView
        android:id="@+id/developer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/developer1"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorSecondaryText"
        android:text="@string/about_developer2"
        android:textSize="@dimen/about_context"/>


    <TextView
        android:id="@+id/link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/developer2"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorSecondary"
        android:text="@string/about_link"
        android:layout_marginTop="@dimen/about_context_margin"
        android:textSize="@dimen/about_link"/>


    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/link"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorSecondaryText"
        android:text="@string/about_date"
        android:layout_marginTop="@dimen/about_context_margin"
        android:textSize="@dimen/about_context"/>


    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorSecondaryText"
        android:text="@string/about_version"
        android:textSize="@dimen/about_context"/>
</RelativeLayout>
