<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.kyvlabs.brrr2.activities.support.BeaconEditActivity$PlaceholderFragment">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/edit_fragment_uuid"
                android:text="@string/edit_fragment_uuid_label"/>

            <EditText
                android:id="@+id/edit_fragment_uuid"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="text"
                android:text="@string/region_uuid"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/edit_fragment_major"
                android:text="@string/edit_fragment_major_label"/>

            <EditText
                android:id="@+id/edit_fragment_major"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/edit_fragment_minor"
                android:text="@string/edit_fragment_minor_label"/>

            <EditText
                android:id="@+id/edit_fragment_minor"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/edit_fragment_title"
                android:text="@string/edit_fragment_title_label"/>

            <EditText
                android:id="@+id/edit_fragment_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/edit_fragment_description"
                android:text="@string/edit_fragment_description_label"/>

            <EditText
                android:id="@+id/edit_fragment_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_fragment_picture_label"/>

            <ImageView
                android:id="@+id/edit_fragment_picture"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:contentDescription="@string/edit_fragment_picture_label"/>

            <Button
                android:id="@+id/edit_fragment_load_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/load_image"/>

        </LinearLayout>
    </ScrollView>


</LinearLayout>
