<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/card"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="10dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:id="@+id/card_title_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/main_card_image"
                android:scaleType="fitXY"
                />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            >

            <TextView
                android:id="@+id/card_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_text_main"
                android:textColor="@color/basicColor"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:singleLine="true"
                android:ellipsize="end"
                android:textSize="32sp"/>

            <TextView
                android:id="@+id/card_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_card_small_grey_text"
                android:textColor="@color/colorSecondaryText"/>

            <TextView
                android:id="@+id/card_main_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:lines="2"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                >

                <Button
                    android:id="@+id/card_action_button1"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/card_button1_text"
                    android:textColor="@color/colorAccent"
                    />

                <Button
                    android:id="@+id/card_action_button2"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/card_action_button1"
                    android:layout_toRightOf="@+id/card_action_button1"
                    android:text="@string/card_button2_text"
                    android:textColor="@color/colorAccent"
                    tools:ignore="RelativeOverlap"/>

                <ImageButton
                    android:id="@+id/card_like_button"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/content_description_heart"
                    android:background="@drawable/like_button_selector"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>