<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:weightSum="100"
              tools:context="com.kyvlabs.brrr2.activities.MainActivity$PlaceholderFragment">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="50"
        android:orientation="horizontal"
        android:weightSum="320">

        <RelativeLayout
            android:id="@id/blank"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="70"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="50"
            android:orientation="vertical"
            android:weightSum="100">

            <ImageButton
                android:id="@+id/walk_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="70"
                android:background="@android:color/transparent"
                android:contentDescription="@string/walk_or_talk_fragment_walk"
                android:scaleType="fitCenter"
                android:src="@drawable/walk_button_selector"/>

        </LinearLayout>

        <TextView
            style="@style/walk_or_talk_text"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="80"
            android:text="@string/walk_or_talk_fragment_or"

            android:textColor="@color/blue"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="50"
            android:orientation="vertical"
            android:weightSum="100">

            <ImageButton
                android:id="@+id/talk_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                android:background="@android:color/transparent"
                android:contentDescription="@string/walk_or_talk_fragment_talk"
                android:scaleType="fitCenter"
                android:src="@drawable/talk_button_selector"/>

        </LinearLayout>

        <RelativeLayout
            android:id="@id/blank"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="70"/>

    </LinearLayout>
</LinearLayout>
