<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="be.thomasmore.brrr.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
            android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:id="@+id/card_title_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/main_card_image"
                android:scaleType="fitXY"
                />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/card_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:textColor="@color/basicColor"
                android:textSize="36sp"/>

            <TextView
                android:id="@+id/card_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:textColor="@color/colorSecondaryText"/>

            <TextView
                android:id="@+id/card_main_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                >

                <Button
                    android:id="@+id/card_action_button1"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/card_button1_text"
                    android:textColor="@color/colorAccent"
                    />

                <Button
                    android:id="@+id/card_action_button2"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/card_action_button1"
                    android:layout_toRightOf="@+id/card_action_button1"
                    android:text="@string/card_button2_text"
                    android:textColor="@color/colorAccent"
                    tools:ignore="RelativeOverlap"/>

                <ImageButton
                    android:id="@+id/card_like_button"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/content_description_heart"
                    android:background="@drawable/like_button_selector"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
